<resources>
    <string name="app_name">MyNotes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="signUpLabel">Não possui cadastro?</string>
    <string name="signUpLink">Cadastre-se aqui.</string>
    <string name="signUpTitulo">Cadastro</string>
    <string name="emailSignUpPlaceholder">exemplo@email.com</string>
    <string name="passwordSignupPlaceholder">Digite sua senha</string>
    <string name="passWordConfirmation">Confirmar senha</string>
    <string name="btnSignUp">cadastrar</string>
    <string name="passwordConfirmationPlaceholder">Repita sua senha</string>
    <string name="logout">logout</string>
</resources>